Wiz7-modification of docker compose & dockerfile to good exec of backend"

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,23 +1,18 @@
-# Utilise l'image Node.js officielle
 FROM node:18
 
-# Définit le répertoire de travail
 WORKDIR /app
 
-# Copie les fichiers package.json et package-lock.json
+# Copie des fichiers package.json et lock (si présent)
 COPY package*.json ./
 
-# Installe les dépendances
+# Installer les dépendances depuis l’intérieur du conteneur
 RUN npm install
 
-# Copie tout le reste du projet
+# Installer Nest CLI (nécessaire pour `start:dev`)
+RUN npm install -g @nestjs/cli
+
+# Copie du reste du code
 COPY . .
 
-# Compile TypeScript en JavaScript
-RUN npm run build
-
-# Expose le port utilisé par NestJS
-EXPOSE 3002
-
-# Commande de démarrage
+# Lancer le serveur NestJS en mode dev
 CMD ["npm", "run", "start:dev"]
